# Practica_1_EDD_Mynor_Monzon_1S_2026

./: CMakeLists.txt  Encabezado.h  Makefile  README.md  main.cpp
Cartas/: Carta.cpp  Carta.h  CartaAccion.cpp  CartaAccion.h  CartaFlip.cpp  CartaFlip.h  CartaNegra.cpp  CartaNegra.h  CartaNumero.cpp  CartaNumero.h
Cartas/Personalizadas/: CartaPersonalizada.cpp  CartaPersonalizada.h  CartaPersonalizada1.h  CartaPersonalizada2.h
Configuracion/: ConfiguradorPartida.cpp  ConfiguradorPartida.h
Estructuras/: ListaCircular.cpp  ListaCircular.h  ListaEnlazada.h  Nodo.h  Pila.h
Jugador/: Jugador.cpp  Jugador.h
Logica/: ReglasJuego.cpp  ReglasJuego.h  ValidadorFlip.cpp  ValidadorFlip.h
Motor/: MotorJuego.cpp  MotorJuego.h
